Перенос маппинга лайков из списка в количество, доработка PostApiDelegateImpl