@@ -10,38 +10,36 @@ import ru.mirea.domain.Post;
 import ru.mirea.dto.PostDto;
 import ru.mirea.dto.PostRqDto;
 import ru.mirea.mapper.PostMapper;
-import ru.mirea.service.LikeService;
 import ru.mirea.service.PostService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PostApiDelegateImpl implements PostApiDelegate {
 
     private final PostService postService;
-    private final LikeService likeService;
     private final PostMapper postMapper;
 
     @Override
     public ResponseEntity<List<PostDto>> getPosts() {
-        List<PostDto> posts = postService.findAll().stream()
-                .map(this::buildPostDtoWithLikeCount)
-                .toList();
-        return ResponseEntity.ok(posts);
+        return postService.findAll().stream()
+                .map(postMapper::postToPostDto)
+                .collect(Collectors.collectingAndThen(Collectors.toList(), ResponseEntity::ok));
     }
 
     @Override
     public ResponseEntity<PostDto> createPost(@Valid PostRqDto postRqDto) {
         Post post = postService.createPost(postRqDto);
         return ResponseEntity.status(HttpStatus.CREATED)
-                .body(buildPostDtoWithLikeCount(post));
+                .body(postMapper.postToPostDto(post));
     }
 
     @Override
     public ResponseEntity<PostDto> getPost(Long postId) {
         Post post = postService.findById(postId);
-        return ResponseEntity.ok(buildPostDtoWithLikeCount(post));
+        return ResponseEntity.ok(postMapper.postToPostDto(post));
     }
 
     @Override
@@ -53,11 +51,6 @@ public class PostApiDelegateImpl implements PostApiDelegate {
     @Override
     public ResponseEntity<PostDto> updatePost(Long postId, @Valid PostRqDto postRqDto) {
         Post post = postService.updatePost(postId, postRqDto);
-        return ResponseEntity.ok(buildPostDtoWithLikeCount(post));
-    }
-
-    private PostDto buildPostDtoWithLikeCount(Post post) {
-        return postMapper.postToPostDto(post)
-                .likeCount(likeService.countLikesByPost(post));
+        return ResponseEntity.ok(postMapper.postToPostDto(post));
     }
 }
